[project]
name = "balanced-news-perspective"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "agno>=1.1.4",
    "bs4>=0.0.2",
    "duckduckgo-search>=7.5.0",
    "googlesearch-python>=1.3.0",
    "h2>=4.2.0",
    "httpx>=0.28.1",
    "openai>=1.64.0",
    "pinecone==5.4.2",
    "pycountry>=24.6.1",
    "python-dotenv>=1.0.1",
    "streamlit>=1.42.2",
]
